--- a/index.html
+++ b/index.html
@@ -91,8 +91,8 @@
                         <div class="swiper-slide">
                             <a href="#" class="card-video">
                                 <div class="thumbnail">
-                                    <img src="/img/thumb-01.jpg" class="thumb" alt="Thumb 01">
-                                    <img src="/img/play.svg" class="icon" alt="play">
+                                    <img src="./img/thumb-01.jpg" class="thumb" alt="Thumb 01">
+                                    <img src="./img/play.svg" class="icon" alt="play">
                                 </div>
                                 <span>Gameplay Reveal</span>
                             </a>                           
@@ -100,8 +100,8 @@
                         <div class="swiper-slide">
                             <a href="#" class="card-video">
                                 <div class="thumbnail">
-                                    <img src="/img/thumb-02.jpg" class="thumb" alt="Thumb 01">
-                                    <img src="/img/play.svg" class="icon" alt="play">
+                                    <img src="./img/thumb-02.jpg" class="thumb" alt="Thumb 01">
+                                    <img src="./img/play.svg" class="icon" alt="play">
                                 </div>
                                 <span>Story Trailer</span>
                             </a>                           
@@ -109,8 +109,8 @@
                         <div class="swiper-slide">
                             <a href="#" class="card-video">
                                 <div class="thumbnail">
-                                    <img src="/img/thumb-03.jpg" class="thumb" alt="Thumb 01">
-                                    <img src="/img/play.svg" class="icon" alt="play">
+                                    <img src="./img/thumb-03.jpg" class="thumb" alt="Thumb 01">
+                                    <img src="./img/play.svg" class="icon" alt="play">
                                 </div>
                                 <span>Introduction Kraven</span>
                             </a>                           
@@ -118,8 +118,8 @@
                         <div class="swiper-slide">
                             <a href="#" class="card-video">
                                 <div class="thumbnail">
-                                    <img src="/img/thumb-04.jpg" class="thumb" alt="Thumb 01">
-                                    <img src="/img/play.svg" class="icon" alt="play">
+                                    <img src="./img/thumb-04.jpg" class="thumb" alt="Thumb 01">
+                                    <img src="./img/play.svg" class="icon" alt="play">
                                 </div>
                                 <span>Reveal Trailer</span>
                             </a>                           
@@ -149,7 +149,7 @@
             </div>
             <div class="right">
                 <span>Design by</span>
-                <img src="/img/design-boost.svg" alt="Design Boost">
+                <img src="./img/design-boost.svg" alt="Design Boost">
             </div>
 
         </div>
